[package]
name = "xchemlab_dls_i04-1_exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "5.0.7", features = ["uuid"] }
async-graphql-axum = "5.0.7"
async-stream = "0.3.5"
axum = { version = "0.6.15", features = ["ws", "headers"] }
sea-orm = { version = "0.11.2", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-uuid",
    "sqlx-mysql",
] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.3.1", features = ["v4"] }
