[package]
name = "exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
async-graphql = { version = "5.0.7", features = ["uuid"] }
async-graphql-axum = "5.0.7"
async-stream = "0.3.5"
axum = { version = "0.6.17", features = ["ws", "headers"] }
derive_more = "0.99.17"
once_cell = "1.17.1"
sea-orm = { workspace = true }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.3.1", features = ["v4"] }
clap = { version = "4.2.4", features = ["derive"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
